mix of branch, curriculum and etc

--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -14,9 +14,9 @@
                 </div>
             </div>
             <div class="col-lg-5 order-2 order-sm-2 text-center mb-10 jumbo-tran-animation mt-5 mt-lg-0">
-                <img src="assets/img/homepage/home-boy.svg" class="img-fluid" alt="">
-                <!-- <img src="assets/img/homepage/blue-bg-boy.svg" class="blue img-fluid" alt=""> -->
-                <!-- <img src="assets/img/homepage/gold-bg-boy.svg" class="gold img-fluid" alt=""> -->
+                <img src="assets/img/homepage/home-boy.svg" class="img-fluid jumbotron-boy" alt="">
+                <img src="assets/img/vector.svg" class="img-fluid vector" alt="">
+
             </div>
         </div>
     </div>
