--- a/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
+++ b/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
@@ -1,5 +1,78 @@
 <div class="branch-info-section">
   <div class="container">
+    <div class="header active-link text-center">It’s fun to be here</div>
+    <div class="sub-header text-center mt-3 mb-lg-0">Our Branches</div>
+
+    <div class="row branch p-lg-5 align-content-end">
+
+      <div class="col-lg-4 one shadow-lg d-flex align-items-center">
+        <img src="../../../../assets/img/two-boy.png" alt="">
+        <div class="row p-3">
+          <div class="text-center upper">
+            Small Wonders Kindergarten
+          </div>
+
+          <div class="text-center lower">
+            L-301, Model Town, Panipat (HR)
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 two shadow-lg d-flex align-items-center">
+        <img src="../../../../assets/img/two-boy.png" alt="">
+        <div class="row p-3">
+          <div class="text-center upper">
+            Small Wonders World School
+          </div>
+
+          <div class="text-center lower">
+            B-BLock , TDI City, Sector 39, Panipat (HR)
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 three shadow-lg d-flex align-items-center">
+        <img src="../../../../assets/img/two-boy.png" alt="">
+        <div class="row p-3">
+          <div class="text-center upper">
+            Small Wonders Ikigai
+          </div>
+
+          <div class="text-center lower">
+            Yamuna Enclave
+          </div>
+        </div>
+      </div>
+
+      <img class="left-bg" src="../../../../assets/img/branch-left-bg.svg" alt="">
+      <img class="right-bg" src="../../../../assets/img/branch-right-bg.svg" alt="">
+    </div>
+
+    <div class="row branch-mobile justify-content-center align-items-center">
+      <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig" (init)="slickInit($event)">
+        <div ngxSlickItem *ngFor="let item of branchList" class="slide">
+          <img class="chart-bg" [src]="item.imgSrc" alt="">
+          <img class="gery-bg" src="../../../../assets/img/grey-background.svg" alt="">
+          <div class="card text-center d-flex ">
+            <div class="card-body d-flex flex-column justify-content-center">
+              <div class="card-title mb-0 py-2">{{item.title}}</div>
+              <div class="card-text py-2">{{item.address}}
+              </div>
+            </div>
+          </div>
+        </div>
+      </ngx-slick-carousel>
+      
+    </div>
+
+    <div class="text-center mb-5">
+      <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-lg-3">Schedule a Tour <i
+          class="fa fa-angle-right"></i></button>
+    </div>
+  </div>
+</div>
+<!-- <div class="branch-info-section">
+  <div class="container">
     <div class="title_sec">
       <p>
         It’s fun to be here
@@ -8,7 +81,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-lg-10">
-        <!-- slick carousel component -->
+        
         <ngx-slick-carousel
           class="carousel"
           #slickModal="slick-carousel"
@@ -16,7 +89,6 @@
           (init)="slickInit($event)"
         >
           <div ngxSlickItem *ngFor="let item of branchList" class="slide">
-            <!-- branch info card-->
             <div class="branch-info-card">
               <a href="/#" class="row">
                 <figure class="col-lg-4 col-4">
@@ -36,4 +108,4 @@
       <button class="btn mbtn" (click)="goToSchedulePage()">Schedule a tour</button>
     </div>
   </div>
-</div>
+</div> -->
