--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -1,6 +1,6 @@
 <div class="contact-sec">
 <div class="container">
-  <div class="banner justify-content-center d-flex">
+  <div class="banner justify-content-center d-flex mt-5">
     <div class="contactus-form p-lg-5 p-3">
       <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
         <div class="row my-lg-3 my-2">
