--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,22 +5,29 @@
   (navigateClicked)="navigateToHomeIntro()"
 ></app-carousel-image-section> -->
 <app-home-intro-section></app-home-intro-section>
-<app-recent-events></app-recent-events>
+<app-branch-info-section></app-branch-info-section>
 <app-home-curriculum-section
   [displayList]="curriculumList"
   [titleIntro]=""
   [title]="'Our Curriculum'"
   [type]="'curriculum'"
 ></app-home-curriculum-section>
-<app-page-break-section></app-page-break-section>
-<app-branch-info-section></app-branch-info-section>
+<app-recent-events></app-recent-events>
+<!-- <app-home-curriculum-section
+  [displayList]="curriculumList"
+  [titleIntro]=""
+  [title]="'Our Curriculum'"
+  [type]="'curriculum'"
+></app-home-curriculum-section> -->
+<!-- <app-page-break-section></app-page-break-section> -->
+<!-- <app-branch-info-section></app-branch-info-section> -->
 <!-- events -->
-<app-home-curriculum-section
+<!-- <app-home-curriculum-section
   [displayList]="eventList"
   [titleIntro]="'Events and Functions'"
   [title]="'Recent Events'"
   [type]="'events-and-gallery'"
-></app-home-curriculum-section>
+></app-home-curriculum-section> -->
 <!--<app-school-age-break-->
 <!--  [schoolAgeBreakList]="schoolAgeBreakList"-->
 <!--&gt;</app-school-age-break>-->
