--- a/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.html
+++ b/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.html
@@ -1,19 +1,12 @@
 <!-- <div class="testimonial-section">
   <div class="ts_img_1 desktop-wrapper"></div>
   <div class="ts_img_2"></div> -->
-<div class="my-5">
+<div class="my-5 testimonials">
   <div class="container">
-    <!-- <div>
-      <p>
-        {{ titleIntro }}
-      </p>
-      <h3>{{ title }}</h3>
-    </div> -->
-
     <div class="text-center testimonila-intro active-link font-weight-bolder">{{ titleIntro }}</div>
-    <div class="my-3 mb-5 testimonial-title text-center">{{ title }}</div>
+    <div class="my-3 mb-lg-5 mb-3 testimonial-title text-center">{{ title }}</div>
     <div class="justify-content-center">
-      <div class="">
+      <div class="slick-desk">
         <!-- slick carousel component -->
         <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig"
           (init)="slickInit($event)">
@@ -31,22 +24,7 @@
                 </div>
               </div>
             </div>
-            </div>
-            <!-- <div class="testimonial-box">
-              <div class="testimonial-box__desc">
-                <p>{{ item.content }}</p>
-              </div>
-              <div class="testimonial-box__info">
-                <figure> -->
-            <!--                  TODO : Add images later-->
-            <!--                  <img [src]="item.imgSrc" />-->
-            <!-- </figure>
-                <div>
-                  <h4>{{ item.name }}</h4>
-                  <p>{{ item.designation }}</p>
-                </div>
-              </div>
-            </div> -->
+          </div>
         </ngx-slick-carousel>
       </div>
     </div>
