--- a/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
+++ b/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
@@ -1,5 +1,24 @@
 <div class="home-curr-section">
   <div class="container">
+    <div class="row">
+      <div class="col-lg-4 order-1 order-sm-1 d-flex flex-column text-center text-lg-start justify-content-center">
+        <div class="header mb-lg-5 text-center text-lg-start">Our Curriculum</div>
+        <div class="curr-content text-center text-lg-start px-3 my-3">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</div>
+        <div class="text-lg-start text-center mb-5">
+          <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-lg-3">Read More <i
+              class="fa fa-angle-right"></i></button>
+        </div>
+      </div>
+      <div class="col-lg-8 order-2 order-sm-2 text-center mb-10 jumbo-tran-animation mt-5 mt-lg-0">
+        Carousel
+      </div>
+
+
+    </div>
+    <!-- <div class="home-curr-section">
+  <div class="container">
     <div class="title_sec">
       <p>
         {{ titleIntro }}
@@ -8,7 +27,6 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-lg-10" *ngIf="type == 'curriculum'">
-        <!-- slick carousel component -->
         <ngx-slick-carousel
           class="carousel"
           #slickModal="slick-carousel"
@@ -31,7 +49,7 @@
       </div>
 
       <div class="col-lg-10" *ngIf="type == 'events-and-gallery'">
-        <!-- slick carousel component -->
+        
         <ngx-slick-carousel
           class="carousel"
           #slickModal="slick-carousel"
@@ -53,9 +71,5 @@
         </ngx-slick-carousel>
       </div>
     </div>
-
-<!--    <div class="text-center mt-4">-->
-<!--      <button class="btn mbtn" routerLink='/{{type}}'>Know More</button>-->
-<!--    </div>-->
   </div>
-</div>
+</div> -->
