--- a/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.scss
+++ b/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.scss
@@ -1,54 +1,82 @@
 @import "../../../../assets/styles/variables.scss";
 
 .home-curr-section {
-  margin-top: 3em;
-  width: 100%;
-  padding: 3em 0;
-  background: $background-primary-light;
-}
+  .header {
+    font-size: 50px;
+    color: $theme-blue;
+    font-weight: bold;
+  }
 
-.title_sec {
-  text-align: center;
-  margin: 0 0 2em;
-
-  p {
-    margin: 0;
-    color: $button-primary;
-    font-size: 25px;
-    line-height: 20px;
-    font-family: Shadows Into Light Two, cursive;
+  .curr-content {
+    font-size: 18px;
   }
 }
 
-::ng-deep .nav-btn {
-  height: 41px !important;
-  width: 41px !important;
-}
-::ng-deep .prev-slide.slick-disabled,
-.next-slide.slick-disabled {
-  pointer-events: none;
-  opacity: 0.5;
-}
-::ng-deep .prev-slide,
-::ng-deep .next-slide {
-  font-size: 0;
-  line-height: 0;
-  position: absolute;
-  top: 50%;
-  display: block;
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  transform: translateY(-50%);
-  cursor: pointer;
-  border: none;
+@media only screen and (max-width: 480px) {
+  .home-curr-section {
+    .header {
+      font-size: 30px;
+    }
+
+    .curr-content {
+      font-size: 12px;
+    }
+
+    button {
+      display: none;
+    }
+  }
 }
 
-::ng-deep .prev-slide {
-  background: url(/assets/img/prev-item.png) no-repeat;
-  left: -50px !important;
-}
-::ng-deep .next-slide {
-  background: url(/assets/img/next-item.png) no-repeat;
-  right: -50px !important;
-}
+// .home-curr-section {
+//   margin-top: 3em;
+//   width: 100%;
+//   padding: 3em 0;
+//   background: $background-primary-light;
+// }
+
+// .title_sec {
+//   text-align: center;
+//   margin: 0 0 2em;
+
+//   p {
+//     margin: 0;
+//     color: $button-primary;
+//     font-size: 25px;
+//     line-height: 20px;
+//     font-family: Shadows Into Light Two, cursive;
+//   }
+// }
+
+// ::ng-deep .nav-btn {
+//   height: 41px !important;
+//   width: 41px !important;
+// }
+// ::ng-deep .prev-slide.slick-disabled,
+// .next-slide.slick-disabled {
+//   pointer-events: none;
+//   opacity: 0.5;
+// }
+// ::ng-deep .prev-slide,
+// ::ng-deep .next-slide {
+//   font-size: 0;
+//   line-height: 0;
+//   position: absolute;
+//   top: 50%;
+//   display: block;
+//   width: 20px;
+//   height: 20px;
+//   padding: 0;
+//   transform: translateY(-50%);
+//   cursor: pointer;
+//   border: none;
+// }
+
+// ::ng-deep .prev-slide {
+//   background: url(/assets/img/prev-item.png) no-repeat;
+//   left: -50px !important;
+// }
+// ::ng-deep .next-slide {
+//   background: url(/assets/img/next-item.png) no-repeat;
+//   right: -50px !important;
+// }
