different devices adjustments

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="custom-footer py-5">
   <div class="container px-5 px-lg-0">
     <div class="row">
-      <div class="col-sm-3 mb-5 footer-logo text-lg-start text-center">
+      <div class="col-lg-3 mb-5 footer-logo text-lg-start text-center">
         <img src="../../../assets/img/new-logo.png">
         <div class="p-3">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -10,8 +10,8 @@
         </div>
       </div>
 
-      <div class="col-sm-1"></div>
-      <div class="col-sm-4 mb-5">
+      <div class="col-lg-1"></div>
+      <div class="col-lg-4 mb-5">
         <div class="row">
           <div class="col-6 header">
             Links
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="col-sm-3 mb-5 px-lg-0 text-lg-start text-center">
+      <div class="col-lg-3 mb-5 px-lg-0 text-lg-start text-center">
         <div class="row header">Subscribe to our newsletter</div>
         <div class="row my-5 px-lg-0 subscribe">
           <input type="text" placeholder="Your Emails">
