--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -6,7 +6,7 @@
                 <div>
                     <div class="active-link jumbo-tron-header mb-2 mb-lg-4">Welcome to Small Wonders</div>
                     <div class="text-center text-lg-start jumbo-tron-text">
-                        <div class="mb-lg-5 mb-3 col-sm-8">Designed to Equip
+                        <div class="mb-lg-5 mb-3 col-sm-8 text">Designed to Equip
                             Students with the Skills necessary for
                             Success!</div>
                         <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-4 mt-lg-3">Read More <i class="fa fa-angle-right"></i></button>
