--- a/src/app/pages/home-page/contact-form/contact-form.component.scss
+++ b/src/app/pages/home-page/contact-form/contact-form.component.scss
@@ -140,3 +140,10 @@ input.error,
 textarea.error{
   border-color: red !important;
 }
+
+
+@media only screen and (max-width: 1025px) {
+  .contactus-form {
+    width: 90%;
+  }
+}
