--- a/src/app/pages/home-page/home-intro-section/home-intro-section.component.scss
+++ b/src/app/pages/home-page/home-intro-section/home-intro-section.component.scss
@@ -72,7 +72,7 @@
   width: 100% !important;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 1025px) {
 
   .intro-content,
   .intro-header {
@@ -94,12 +94,14 @@
   .intro-banner-title {
     // right: -35px !important;
     top: 20px !important;
+    left: 200px;
   }
 
   .intro-banner-img-background {
-    right: 55px !important;
+    // right: 55px !important;
     top: 80px !important;
-
+    left: 95px !important;
+      top: 80px !important;
     img {
       height: 300px !important;
     }
