--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,9 +29,9 @@
           <div class="col-6 header">
             Company
             <ul class="mt-5 ps-0">
-              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Terms & Conditions</a></li>
-              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Privacy Policy</a></li>
-              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Contact</a></li>
+              <li class="my-2"><a>Terms & Conditions</a></li>
+              <li class="my-2"><a>Privacy Policy</a></li>
+              <li class="my-2"><a [routerLink]="['/contact-form']">Contact</a></li>
             </ul>
           </div>
         </div>
