--- a/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.scss
+++ b/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.scss
@@ -142,6 +142,11 @@
 
 .card-text {
   font-size: 15px;
+
+      display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 6;
+        overflow: hidden;
 }
 
 
