--- a/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.scss
+++ b/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.scss
@@ -1,5 +1,70 @@
 @import "../../../../assets/styles/variables.scss";
 
+swiper {
+  width: 100%;
+  height: 100%;
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    // background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 10px;
+  }
+
+  .swiper-slide::before {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(360deg, rgba(2, 0, 36, 0.48923319327731096) 0%, rgba(255, 255, 255, 0) 100%);
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    border-radius: 10px;
+  }
+
+  .title {
+    position: absolute;
+    bottom: 10px;
+    color: white;
+    font-weight: bold;
+    transform: rotate(-90deg);
+    // transform-origin: 0 0;
+    transform-origin: 0 0;
+    // white-space: nowrap;
+
+    // position: absolute;
+    //   bottom: 10px;
+    //   color: white;
+    //   font-weight: bold;
+    //   transform: rotate(-90deg);
+    //   display: block;
+    //   width: 100%;
+    //   /* height: 100%; */
+    //   white-space: nowrap;
+  }
+
+  .swiper-slide:nth-child(n) {
+    width: 100px;
+  }
+
+  .swiper-slide-active {
+    width: 300px !important;
+
+    .title {
+      white-space: unset;
+      transform: rotate(0deg);
+      transform-origin: unset
+    }
+  }
+}
+
 .home-curr-section {
   .header {
     font-size: 50px;
@@ -9,6 +74,26 @@
 
   .curr-content {
     font-size: 18px;
+  }
+}
+
+
+@media only screen and (max-width: 480px) {
+  swiper {
+    .swiper-slide {
+      height: 300px;
+      // width: 150px;
+    }
+
+    .swiper-slide-active {
+      width: 150px !important;
+    }
+      .swiper-slide:nth-child(n) {
+        width: 50px;
+      }
+        .title {
+          font-size: 12px;
+        }
   }
 }
 
