replaced bootstrap carousel with ng-carousel

--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -9,7 +9,7 @@
                         <div class="mb-lg-5 mb-3 col-sm-8 text">Designed to Equip
                             Students with the Skills necessary for
                             Success!</div>
-                        <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-4 mt-lg-3">Read More <i class="fa fa-angle-right"></i></button>
+                        <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-4 mt-lg-3" (click)="navigateToAboutUs()">Read More <i class="fa fa-angle-right"></i></button>
                     </div>
                 </div>
             </div>
