--- a/src/app/components/recent-events/recent-events.component.html
+++ b/src/app/components/recent-events/recent-events.component.html
@@ -20,7 +20,8 @@
         </div>
     </div>
     <div class="text-center my-lg-5">
-        <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-4 mt-lg-3">See More <i
-                class="fa fa-angle-right"></i></button>
+      <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-4 mt-lg-3" (click)="navigateToEventsAndGallery()">
+        See More <i class="fa fa-angle-right"></i>
+      </button>
     </div>
 </div>
