--- a/src/app/pages/activities-page/activity-display/activity-display.component.html
+++ b/src/app/pages/activities-page/activity-display/activity-display.component.html
@@ -1,29 +1,8 @@
-<div id="carouselImageList" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div
-      *ngFor="let data of imageListInCarousel; let i = index"
-      class="carousel-item"
-      [ngClass]="i === 0 ? 'active' : ''"
-    >
-      <img [src]="data" alt="eventImageCarousel"/>
+<ngb-carousel *ngIf="imageListInCarousel">
+  <ng-template ngbSlide *ngFor="let img of imageListInCarousel; let i = index">
+    <img [src]="img" alt="Slide {{i + 1}}">
+    <div class="carousel-caption">
+      <h3>Slide {{i + 1}}</h3>
     </div>
-  </div>
-  <a
-    class="carousel-control-prev"
-    href="#carouselImageList"
-    role="button"
-    data-slide="prev"
-  >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a
-    class="carousel-control-next"
-    href="#carouselImageList"
-    role="button"
-    data-slide="next"
-  >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  </ng-template>
+</ngb-carousel>
