--- a/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.html
+++ b/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.html
@@ -154,33 +154,10 @@
 </div>
 
 <app-overlay>
-  <div id="carouselImageList" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div
-        *ngFor="let data of imageListInCarousel; let i = index"
-        class="carousel-item"
-        [ngClass]="i === 0 ? 'active' : ''"
-      >
-        <img [src]="data" alt="eventImageCarousel" />
-      </div>
-    </div>
-    <a
-      class="carousel-control-prev"
-      href="#carouselImageList"
-      role="button"
-      data-slide="prev"
-    >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a
-      class="carousel-control-next"
-      href="#carouselImageList"
-      role="button"
-      data-slide="next"
-    >
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+  <ngb-carousel *ngIf="imageListInCarousel">
+    <ng-template ngbSlide *ngFor="let img of imageListInCarousel; let i = index">
+      <img [src]="img" alt="Slide {{i + 1}}">
+    </ng-template>
+  </ngb-carousel>
+
 </app-overlay>
