--- a/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.scss
+++ b/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.scss
@@ -80,7 +80,7 @@
 }
 
 .left-big-block {
-  width: 100%;
+  //width: 100%;
   margin-bottom: 3em;
   position: relative;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1.5));
