--- a/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
+++ b/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
@@ -4,10 +4,10 @@
       <div class="col-lg-4 order-1 order-sm-1 d-flex flex-column text-center text-lg-start justify-content-center">
         <div class="header mb-lg-5 text-center text-lg-start">Our Curriculum</div>
         <div class="curr-content text-center text-lg-start px-3 my-3">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</div>
+          Our curriculum is tailored to spark curiosity and foster a love for learning. It's a blend of traditional fundamentals and innovative approaches, ensuring a well-rounded education. We focus on experiential learning, where students explore subjects like math, science, arts, and languages through hands-on projects and real-world applications. Our approach nurtures critical thinking, creativity, and collaboration, preparing our students for the challenges and opportunities of the future.
+      </div>
         <div class="text-lg-start text-center mb-5">
-          <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-lg-3">Read More <i
+          <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-lg-3" (click)="navigateToCurriculum()">Read More <i
               class="fa fa-angle-right"></i></button>
         </div>
       </div>
@@ -27,6 +27,8 @@
         </swiper>
       </div>
     </div>
+  </div>
+</div>
     <!-- <div class="home-curr-section">
   <div class="container">
     <div class="title_sec">
@@ -59,7 +61,7 @@
       </div>
 
       <div class="col-lg-10" *ngIf="type == 'events-and-gallery'">
-        
+
         <ngx-slick-carousel
           class="carousel"
           #slickModal="slick-carousel"
