adding ngNoForm to disable Angular form handling in plain HTML prevents Angular from trying to wire up its form directives and resolves the "No provider for ControlContainer" error.

--- a/src/app/pages/blog-page/blog-page.component.html
+++ b/src/app/pages/blog-page/blog-page.component.html
@@ -138,7 +138,7 @@ sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad mi
       </div>
 
       <div class="wrapper">
-        <form class="search">
+        <form class="search" ngNoForm>
           <input type="text" class="searchText" placeholder="Find some cool blog">
           <input type="submit" class="searchButton" value="Search" disabled>
         </form>
