--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -4,7 +4,7 @@
     <div class="con">
     <h1 class="text-center"> Contact us </h1>
     </div>
-    
+
 
 <section class="form-sec">
   <div class="container from-sec2">
@@ -12,7 +12,7 @@
       <div class="col-md-12 col-lg-7 col-xl-7 col-xxl-8 p-lg-5 p-4">
         <h5>Let 's Capture Wonder</h5>
         <h3 class="get-h">Get in touch</h3>
-        <form class="row g-3 pt-4">
+        <form class="row g-3 pt-4" ngNoForm>
           <div class="col-md-6">
             <input type="text" class="form-control" id="inputFisrtName" placeholder="First Name">
           </div>
@@ -35,18 +35,18 @@
         </form>
       </div>
       <div class="col-md-12 col-lg-5 col-xl-5 col-xxl-4 con-sec2">
-        <p class="con-p para"> Thank you for your interest in Small Wonders. 
-          We look forward to hearing from you and serving you in any way we can. 
+        <p class="con-p para"> Thank you for your interest in Small Wonders.
+          We look forward to hearing from you and serving you in any way we can.
           Please feel free to use the form or contact us by phone or email.</p>
         <hr>
-       
+
         <li class="con-li"><span><i class="fa fa-phone con-icon" aria-hidden="true"></i> 0180-2666666
           </span></li>
           <li class="con-li"><span><i class="fa fa-phone con-icon" aria-hidden="true"></i> 9138-222-500
           </span></li>
           <li class="con-li"><span><i class="fa fa-phone con-icon" aria-hidden="true"></i> 9138-222-700
           </span></li>
-      
+
         <li class="con-li"><span class="con-tx"><i class="fa fa-envelope con-icon"
               aria-hidden="true"></i>smallwonders2002@gmail.com
           </span></li>
