--- a/src/app/pages/franchise-page/input-form/input-form.component.html
+++ b/src/app/pages/franchise-page/input-form/input-form.component.html
@@ -7,7 +7,7 @@
       If you are interested to learn more about Small Wonders franchise, please fill in the
       form
     </p>
-    <form class="form-container">
+    <form class="form-container" ngNoForm>
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="form-group">
