--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -764,7 +764,7 @@ h6 {
 
 /* contact us */
 .con-bg {
-    background-image: url("../image/rht2rmi.png");
+    // background-image: url("../image/rht2rmi.png");
     background-repeat: no-repeat;
     background-size: auto;
     height: 600px;
